# FrameForge

./: .gitignore  .gitmodules  README.md  plan.md
launcher/: package-lock.json  package.json
launcher/src/: App.tsx  index.css
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/src/: injector.rs  lib.rs
runtime/: CMakeLists.txt
runtime/src/: main.cpp
runtime/src/engine/: frame_capture.cpp  frame_capture.h  interpolation_engine.cpp  interpolation_engine.h  motion_estimator.cpp  motion_estimator.h  pacing_controller.cpp  pacing_controller.h
runtime/src/hooks/: dx11_hook.cpp  dx11_hook.h
runtime/src/overlay/: overlay.cpp  overlay.h
